2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/netflow/nf_item_list.php, include/functions_reporting.php,
	include/functions_modules.php, include/functions_snmp_browser.php,
	include/functions_agents.php, operation/tree.php,
	operation/reporting/reporting_xml.php: improved source code style.

2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	pandoradb.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: set the
	counts columns of agent table as "signed" to avoid overflow
	and add check to tactical statistics to avoid show negative
	numbers

	* godmode/agentes/module_manager_editor_plugin.php: Increase
	the size of text inputs in plugin modules for bug 3606401

2013-03-05  Junichi Satoh  <junichi@rworks.jp>
	
	* include/help/ja/help_tags_config.php,
        include/help/ja/help_agent_server.php: Added new help files.
	
        * include/help/ja/help_module_definition.php: Updated the description.

2013-03-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	include/functions_modules.php
	include/functions_reporting.php
	include/functions_servers.php: Fix counts when validate or
	delete alerts and fix some little bugs of previous commits

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php: added constant for the module not init
	status.

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_netflow.php,
	include/help/ja/help_snmp_trap_types.php,
	include/functions_extensions.php,
	include/functions_snmp_browser.php, include/functions_events.php,
	include/functions_api.php: improved the code style.

2013-03-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.item_editor.php,
	include/functions_ui.php, include/functions_reporting.php,
	include/constants.php, include/ajax/reporting.ajax.php,
	include/ajax/agent.php, operation/agentes/ver_agente.php: fixed the