@@ -994,7 +994,8 @@ function config_process_config () {
 				//If current user is editing himself or if the user has UM (User Management) rights on any groups the user is part of AND the authorization scheme allows for users/admins to update info
 				if (($config["id_user"] == $id || check_acl ($config["id_user"], users_get_groups ($id), "UM")) && $config["user_can_update_info"]) {
 					$view_mode = false;
-				} else {
+				}
+				else {
 					$view_mode = true;
 				}
 				
