@@ -1,5 +1,11 @@
 2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_netflow.php, include/functions_graph.php,
+	include/functions_config.php, include/functions_groups.php: improved
+	source code style.
+
+2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/agentes/module_manager_editor.php,
 	godmode/netflow/nf_item_list.php, include/functions_reporting.php,
 	include/functions_modules.php, include/functions_snmp_browser.php,
